# Alkahest

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
ci/: bench.sh  build.sh  test.sh
crates/alkahest-audio/: Cargo.toml
crates/alkahest-audio/src/: bridge.rs  generators.rs  lib.rs  mixer.rs  scanner.rs
crates/alkahest-bench/: Cargo.toml
crates/alkahest-bench/src/: lib.rs  main.rs  report.rs  runner.rs  scenes.rs
crates/alkahest-core/: Cargo.toml
crates/alkahest-core/src/: constants.rs  direction.rs  error.rs  lib.rs  material.rs  math.rs  mod_manifest.rs  rule.rs  types.rs
crates/alkahest-persist/: Cargo.toml
crates/alkahest-persist/src/: compat.rs  compress.rs  error.rs  format.rs  lib.rs  load.rs  save.rs  subregion.rs
crates/alkahest-render/: Cargo.toml
crates/alkahest-render/src/: ao.rs  debug_lines.rs  lib.rs  lighting.rs  octree.rs  pick.rs  renderer.rs  sky.rs  transparency.rs
crates/alkahest-rules/: Cargo.toml
crates/alkahest-rules/examples/: reaction_catalog.rs
crates/alkahest-rules/src/: balancing.rs  compiler.rs  defaults.rs  lib.rs  loader.rs  migration.rs  validator.rs
crates/alkahest-sim/: Cargo.toml
crates/alkahest-sim/src/: buffers.rs  conflict.rs  lib.rs  pipeline.rs  rng.rs  structural.rs  test_harness.rs
crates/alkahest-sim/src/passes/: activity.rs  commands.rs  electrical.rs  mod.rs  movement.rs  pressure.rs  reactions.rs  thermal.rs
crates/alkahest-web/: Cargo.toml  worker.js
crates/alkahest-web/src/: app.rs  camera.rs  commands.rs  gpu.rs  input.rs  lib.rs  storage.rs
crates/alkahest-web/src/tools/: brush.rs  heat.rs  mod.rs  place.rs  push.rs  remove.rs
crates/alkahest-web/src/ui/: browser.rs  debug.rs  help.rs  hover.rs  hud.rs  mod.rs  settings.rs  toolbar.rs
crates/alkahest-world/: Cargo.toml
crates/alkahest-world/src/: chunk.rs  chunk_map.rs  dispatch.rs  lib.rs  state_machine.rs  streaming.rs  terrain.rs
data/materials/: _schema.ron  electrical.ron  energy.ron  exotic.ron  explosives.ron  metals.ron  naturals.ron  organics.ron  synthetics.ron
data/mods/example-mod/: mod.ron
data/mods/example-mod/materials/: crystals.ron
data/mods/example-mod/rules/: crystal_interactions.ron
data/rules/: _schema.ron  biological.ron  combustion.ron  displacement.ron  dissolution.ron  electrical.ron  phase_change.ron  structural.ron  synthesis.ron  thermal.ron
docs/: agent-prompt.md  architecture.md  milestones.md  modding-guide.md  project-structure.md  recipes.md  requirements.md  technical-constraints.md  test-strategy.md
shaders/common/: coords.wgsl  rng.wgsl  types.wgsl
shaders/render/: blit.wgsl  debug_lines.wgsl  ray_march.wgsl  sky.wgsl
shaders/sim/: activity.wgsl  commands.wgsl  electrical.wgsl  movement.wgsl  pressure.wgsl  reactions.wgsl  thermal.wgsl
web/: index.html
