[workspace]
resolver = "2"
members = [
    "crates/alkahest-audio",
    "crates/alkahest-bench",
    "crates/alkahest-core",
    "crates/alkahest-persist",
    "crates/alkahest-render",
    "crates/alkahest-rules",
    "crates/alkahest-sim",
    "crates/alkahest-web",
    "crates/alkahest-world",
]

[workspace.dependencies]
# GPU — pinned per C-RUST-4. Tested with Chrome 120+, Firefox 130+.
wgpu = "=24.0.1"

# UI
egui = "=0.31.0"
egui-wgpu = "=0.31.0"

# WASM bindings
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = "=0.3.77"
js-sys = "=0.3.77"

# Logging
log = "=0.4.22"
console_log = "=1.0.0"
console_error_panic_hook = "=0.1.7"

# Math
glam = "=0.29.2"

# Serialization / GPU data
bytemuck = { version = "=1.21.0", features = ["derive"] }
serde = { version = "=1.0.217", features = ["derive"] }
ron = "=0.8.1"
serde_json = "=1.0.138"

# Compression
lz4_flex = "=0.11.3"

# Error handling
thiserror = "=2.0.11"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
