[package]
name = "alkahest-rules"
version = "0.1.0"
edition = "2021"

[dependencies]
alkahest-core = { path = "../alkahest-core" }
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
