[package]
name = "alkahest-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkahest-core = { path = "../alkahest-core" }
wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
log = { workspace = true }
console_log = { workspace = true }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Performance",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "GpuAdapterInfo",
    "CssStyleDeclaration",
    "MediaQueryList",
    "console",
] }
